Documentation edits made through Mintlify web editor

--- a/essentials/code.mdx
+++ b/essentials/code.mdx
@@ -1,14 +1,14 @@
 ---
-title: 'Code Blocks'
-description: 'Display inline code and code blocks'
-icon: 'code'
+title: "Code Blocks"
+description: "Display inline code and code blocks"
+icon: "code"
 ---
 
 ## Basic
 
 ### Inline Code
 
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
+To denote a `word` or `phrase` as code, enclose it in backticks (\`).
 
 ```
 To denote a `word` or `phrase` as code, enclose it in backticks (`).
@@ -26,12 +26,6 @@ class HelloWorld {
 }
 ```
 
-````md
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
+```wasm
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/board/g2yauVQExOpLZABJV8mMat/Riddhi-Gondaliya?node-id=0-1&embed-host=share" allowfullscreen></iframe>
 ```
-````
