Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Introduction"
-description: "Welcome to the home of your new documentation"
+title: "About Me"
+description: "Hi, I’m Riddhi! I’m a Silicon Valley-based Product Designer working on AR/VR experiences. I’ve worked at a B2C startup in AI/ML and in the AR/VR Research Lab at Arizona State University. Currently, I’m expanding my skills in SAAS and B2B products. I enjoy watching movies, attending conferences, meeting new people, and participating in hackathons. I’m always eager to learn about new technologies where I can contribute my design skills. Staying active in the community is something I love!"
 ---
 
 <img
